fix: events on mobile

--- a/src/app/events/eventsMobile2.module.css
+++ b/src/app/events/eventsMobile2.module.css
@@ -45,7 +45,7 @@
 }
 
 .desc{
-    font-size: 1rem;
+    font-size: .85rem;
     font-family: 'KoPub';
     padding-inline: 2rem;
 }
